base html idea added

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 <html>
 <body>
   <h1>Octagon Nation</h1>
@@ -9,3 +11,4 @@
   <a href="">Sign In</a>
 </body>
 </html>
+
