--- a/main_app/templates/events/index.html
+++ b/main_app/templates/events/index.html
@@ -1,26 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/event-index.css' %}">
-{% endblock %} 
+{% endblock %}
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events</title>
-    
-</head>
-<body>
-    <h1>All Events</h1>
-    <ul>
-        {% for event in events %}
-            <li>
-                {{ event.name }} - {{ event.date }}    
-            </li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+<h1>All Events</h1>
+<ul>
+    {% for event in events %}
+        <li>
+            <a href="{% url 'event_detail' event.pk %}">
+                {{ event.name }} - {{ event.date }}
+            </a>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock %}
