--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -9,7 +9,7 @@
 <h1>{{ event.name }}</h1>
 <p><strong>Date:</strong> {{ event.date }}</p>
 <p><strong>Location:</strong> {{ event.location }}</p>
-<p><strong>Number of Attendees:</strong> {{ event.num_attendees }}</p>
+<p><strong>Number of Attendees:</strong> {{ event.attendees }}</p>
 
 <h2>Fighters</h2>
 <ul>
