--- a/main_app/templates/events/detail.html
+++ b/main_app/templates/events/detail.html
@@ -10,7 +10,9 @@
 <p><strong>Date:</strong> {{ event.date }}</p>
 <p><strong>Location:</strong> {{ event.location }}</p>
 <p><strong>Number of Attendees:</strong> {{ event.attendees }}</p>
-
+<div class="event-actions">
+    <a href="{% url 'event-update' event.id %}" class="btn warn">Edit</a>
+  </div>
 <h2>Fighters</h2>
 <ul>
     <!-- {% for fighter in event.fighters.all %}
