--- a/main_app/templates/main_app/event_form.html
+++ b/main_app/templates/main_app/event_form.html
@@ -6,19 +6,19 @@
 {% endblock %}
 
 {% block content %}
-<h1>Create New Event</h1>
+<div class="page-header">
+    {%if event%}
+    <h1>Edit {{ event.name }}</h1>
+    {%else%}
+    <h1>Create New Event</h1>
+    {%endif%}
+</div>
 
-<!-- The form for creating a new event -->
 <form method="POST">
     {% csrf_token %}
-    
-    <!-- The form fields rendered here -->
     {{ form.as_p }} 
-
-    <!-- Submit button -->
     <button type="submit">Create Event</button>
 </form>
 
-<!-- Link to go back to the events index -->
 <a href="{% url 'events' %}">Back to All Events</a>
 {% endblock %}
