--- a/main_app/templates/profile/index.html
+++ b/main_app/templates/profile/index.html
@@ -28,11 +28,8 @@
             </ul>
         </div>
     </div>
-
-    <h2>Edit Profile</h2>
-    <form method="POST" enctype="multipart/form-data">
+    <form id="logout-form" method="post" action="{% url 'logout' %}">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save Changes</button>
-    </form>
+        <button type="submit">Log out</button>
+      </form>
 {% endblock %}
