--- a/main_app/templates/profile/index.html
+++ b/main_app/templates/profile/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>User Profile</h1>
-    
+    <h2>Welcome back {{user.username}}</h2>
     <div class="profile-container">
         <div class="profile-pic">
             {% if user_profile.profile_pic %}
