--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,6 +18,7 @@
                 <li><a href="{% url 'events' %}">Events</a></li>
                 {% else %}
                 <li><a href="{% url 'home' %}">Login</a></li>
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 {% endif %}
             </ul>
         </nav>
