login function and route working

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,7 +17,7 @@
                 <li><a href="">Fighters</a></li>
                 <li><a href="{% url 'events' %}">Events</a></li>
                 {% else %}
-                <li><a href="{% url 'home' %}">Login</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 {% endif %}
             </ul>
