--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block head%}
+{% block head %}
 {% if not user.is_authenticated%}
 <html>
 <body>
@@ -11,7 +11,7 @@
   </form>
   
   <section>
-    <form action="{% url 'home' %}" method="post" class="login">
+    <form action="{% url 'login' %}" method="post" class="login">
       <h1>Login</h1>
       {% csrf_token %} {{ form.as_p }}
       <input type="hidden" name="next" value="{{ next }}" />
