deployment items added

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -18,6 +18,9 @@
       <button type="submit" class="btn submit">Login</button>
     </form>
   </section>
+  <div class="image-container">
+    <img src="https://cdn11.bigcommerce.com/s-7bmhz/images/stencil/1280x1280/products/437/793/via-UFC-10__46610.1590267481.jpg?c=2" alt="MMA octagon" />
+  </div>
 </body>
 </html>
 {% endif %}
