--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -19,7 +19,11 @@
 }
 
 .image-container {
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+    margin: 0; 
 }
 
 .image-container img {
