--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,13 +27,13 @@
    
     <main>
         {% block content %}
-        <!-- Page specific content will go here -->
+        
         {% endblock %}
     </main>
 
     
     <footer>
-        <p>&copy; 2024 Octagon Nation. All rights reserved.</p>
+        <p>&copy; 2024 Octagon Nation.</p>
     </footer>
 
     
