--- a/main_app/templates/profile/index.html
+++ b/main_app/templates/profile/index.html
@@ -9,8 +9,8 @@
     <h2>Welcome back {{user.username}}</h2>
     <div class="profile-container">
         <div class="profile-pic">
-            {% if user_profile.profile_pic %}
-                <img src="{{ user_profile.profile_pic.url }}" alt="Profile Picture">
+            {% if user.profile_pic %}
+                <img src="{{ user.profile_pic.url }}" alt="Profile Picture">
             {% else %}
                 <p>No profile picture</p>
             {% endif %}
@@ -18,13 +18,12 @@
         
         <div class="basic-info">
             <h3>Basic Info</h3>
-            <p>{{ user_profile.basic_info }}</p>
+            <p>{{ user.basic_info }}</p>
         </div>
         
         <div class="followed-fighters">
             <h3>Followed Fighters</h3>
             <ul>
-                <!-- Loop through followed fighters here -->
             </ul>
         </div>
     </div>
